--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,9 +1,8 @@
 
 
 [credentials]
-client_id = "767330583989-fi4k573gibu0kj25hirqdvk9mdkeuthq.apps.googleusercontent.com"
-client_secret = "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"
-redirect_uris = ["http://localhost:8504/", "https://project-matthew-hemanthallugunti.streamlit.app"]
+
+redirect_uris = ["http://localhost:8504/", "https://project-matthew-hemanthallugunti.streamlit.app/"]
 
 [server]
 port = 8504  # Change to any port that is not in use
